--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Página em construção!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>GDM Xadrez</title>
+</head>
+
+<body>
+
+    <div style="text-align: center;">
+        <img src="resources/gdm-logo.png" style="height: 30rem;">
+        <h1 style="color: green;">🚧 Website em construção 🚧</h1>
+    </div>
+</body>
+
+</html>
