--- a/atletas.html
+++ b/atletas.html
@@ -27,10 +27,10 @@
                     <a class="nav-link" href="atletas.html">Atletas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Treinos</a>
+                    <a class="nav-link" href="index.html#treinos">Treinos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contactos</a>
+                    <a class="nav-link" href="index.html#contactos">Contactos</a>
                 </li>
                 </ul>
             </div>
