--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1bff386940.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="resources/css/index.css">
 
@@ -42,33 +44,55 @@
 
     <header>
         <h1>GDM Xadrez</h1>
+        <img src="resources/img/gdm-logo.png" >
         <h3>Clube de xadrez de Macedo de Cavaleiros</h3>
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-chevron-double-down header-icon" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+            <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        </svg>
     </header>
     
     <div class="container" id="treinos">
-        <h2>Treinos</h2>
-        <h4>Regime online:</h4>
-        <ul>
-            <li>Sexta-feira 18:00 (avançado)</li>
-            <li>Sabado 10:00 (principiantes)</li>
-        </ul>
-
-        <h4>Regime Presencial:</h4>
-        <ul>
-            <li>A determinar...</li>
-        </ul>
+        <div class="one">
+            <h2>Treinos</h2>
+            <div class="regimes">
+                <h4>Regime online:</h4>
+                <ul>
+                    <li>Sexta-feira 18:00 (avançado)</li>
+                    <li>Sabado 10:00 (principiantes)</li>
+                </ul>
+            </div>
+            <div class="regimes">
+                <h4>Regime Presencial:</h4>
+                <ul>
+                    <li>A determinar...</li>
+                </ul>
+            </div>
+        </div>
+        <div class="two">
+            <h2>Puzzle Diário</h2>
+            <iframe id="blockrandom" name="iframe" src="https://www.shredderchess.com/online/applets/dailytactics.php?lang=en" width="50%" height="480px" scrolling="no" frameborder="0" title="Daily Chess Puzzle" class="wrapper puzzle">
+                This option will not work correctly. Unfortunately, your browser does not support inline frames.	</iframe>
+        </div>
     </div>
 
-    <div class="container" id="contactos">
+    <div class="container contactos" id="contactos">
         <h2>Contactos</h2>
-        <ul>
-            <li>E-mail: ......</li>
-            <li>Telemóvel: .......</li>
-        </ul>
+
+        <div class="container" style="margin: 0;">
+            <div style="float: left; padding-right: 8rem;">
+                <p><i class="fas fa-envelope"></i>gdmxadrez@gmail.com</p>
+                <p><i class="fas fa-phone-alt"></i>914644102</p>
+            </div>
+            <div>
+                <p><i class="fab fa-discord"></i><a href="https://discord.gg/uay6AdZxMc">Clica aqui!</a></p>
+                <p><i class="fab fa-facebook"></i><a href="https://www.facebook.com/GDMXadrez">Facebook</a></p>
+            </div>
+        </div>
     </div>
 
     <footer>
-
+        <p>Made by <a href="http://web.tecnico.ulisboa.pt/jeronimo.mendes/">Jerónimo Mendes</a></p>
     </footer>
 
     <script src="resources/js/index.js"></script>
