--- a/atletas.html
+++ b/atletas.html
@@ -43,6 +43,10 @@
         </div>
     </div>
     
+    <footer>
+        <p>Made with 💚 by <a target="_blank" href="http://web.tecnico.ulisboa.pt/jeronimo.mendes/">Jerónimo Mendes</a></p>
+    </footer>
+
 
     <script src="resources/js/atletas.js"></script>
 
