--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                 <p><i class="fas fa-phone-alt"></i>914644102</p>
             </div>
             <div>
-                <p><i class="fab fa-discord"></i><a href="https://discord.gg/uay6AdZxMc">Clica aqui!</a></p>
-                <p><i class="fab fa-facebook"></i><a href="https://www.facebook.com/GDMXadrez">Facebook</a></p>
+                <p><i class="fab fa-discord"></i><a target="_blank" href="https://discord.gg/uay6AdZxMc">Clica aqui!</a></p>
+                <p><i class="fab fa-facebook"></i><a target="_blank" href="https://www.facebook.com/GDMXadrez">Facebook</a></p>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>Made by <a href="http://web.tecnico.ulisboa.pt/jeronimo.mendes/">Jerónimo Mendes</a></p>
+        <p>Made with 💚 by <a target="_blank" href="http://web.tecnico.ulisboa.pt/jeronimo.mendes/">Jerónimo Mendes</a></p>
     </footer>
 
     <script src="resources/js/index.js"></script>
